# Terminal

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  start.bat  vercel.json
.github/workflows/: ci.yml
docs/: architecture.md
frontend/: .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  react-simple-maps.d.ts  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  auth.ts  ws.ts
frontend/src/: global.d.ts
infra/docker/: postgres-init.sql
infra/terraform/: main.tf  outputs.tf  variables.tf
monitoring/prometheus/: alerts.yml  prometheus.yml
proto/crisis/: crisis.proto
scripts/: simulate_crisis.py
services/decision-engine/: .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.json  requirements.txt
services/decision-engine/app/: __init__.py  config.py  main.py
services/decision-engine/app/agents/: coordinator.py  prompts.py
services/decision-engine/app/api/routes/: __init__.py  auth.py  baggage.py  call_center.py  cost_model.py  crew_recovery.py  crisis.py  demo.py  departure_hold.py  flight_data.py  flights.py  gate.py  health.py  hub_control.py  impact_graph.py  iocc.py  pcc.py  prediction.py  proactive.py  pss.py  recovery.py  revenue.py  self_service.py  simulation.py  vouchers.py  ws.py
services/decision-engine/app/core/: deps.py  redis.py  security.py
services/decision-engine/app/db/: __init__.py  database.py  models.py  seed.py
services/decision-engine/app/guardrails/: __init__.py  pii_filter.py  prompt_guard.py  rate_limiter.py
services/decision-engine/app/integrations/: scheduler.py
services/decision-engine/app/integrations/amadeus/: client.py  pss_adapter.py
services/decision-engine/app/integrations/cirium/: client.py
services/decision-engine/app/models/: __init__.py  compensation.py  crisis.py  decision.py  flight.py  passenger.py
services/decision-engine/app/optimization/: __init__.py  constraints.py  models.py  objectives.py  solver.py
services/decision-engine/app/regulations/: __init__.py  eu261.py  validator.py
services/decision-engine/app/rules/: __init__.py  act.py  irrops_engine.py  mct.py  passenger_priority.py
services/decision-engine/app/services/: crisis_service.py
services/decision-engine/app/utils/: __init__.py  crypto.py  logger.py
services/decision-engine/migrations/: env.py
services/decision-engine/tests/: conftest.py  test_guardrails_and_regulations.py  test_routes.py
services/ingestion-service/: Dockerfile  go.mod  (+1 more)
(+117 files in other folders)
