[project]
name = "aero-agent-decision-engine"
version = "0.1.0"
description = "Aero-Agent Decision Engine – AI-powered airline crisis management"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Aero-Agent Team"},
]
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "pulp>=2.9.0,<3.0.0",
    "redis>=5.2.0,<6.0.0",
    "httpx>=0.28.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "cryptography>=44.0.0,<45.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
ai = [
    "crewai>=0.80.0,<1.0.0",
    "langchain-openai>=0.2.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["app*"]

# ── Ruff ──────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "S101",  # assert in tests is fine
    "S104",  # binding to all interfaces OK for containers
    "S603",  # subprocess calls – we don't use any
    "B008",  # function calls in default arguments (Depends())
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── MyPy ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ── Pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
